workloads/apps/cdn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cdn
