workloads/apps/cdn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - cdn.ozeliurs.com
      secretName: cdn-tls
  rules:
    - host: cdn.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdn
                port:
                  number: 80
